# dyskobol

./: .gitignore  Dockerfile  README.md  README.rst  build.sbt  log_file
core/res/: dyskobol.conf  test.iso
core/src/main/resources/: logback.xml
core/src/main/scala/bindings/: Sleuthkit.scala
core/src/main/scala/pl/dyskobol/: Main.scala  RuntimeCompilation.scala
core/src/main/scala/pl/dyskobol/examples/: CustomizableApp.scala  DocsApp.scala  ImageApp.scala  MetricsApp.scala  PostgresDbApp.scala  UnzipExampleApp.scala  WorkerPoolApp.scala  package.scala
core/src/main/scala/pl/dyskobol/model/: Constans.scala  File.java  FileProperties.scala  FileStream.scala  package.scala
core/src/main/scala/pl/dyskobol/persistance/: CommandHandler.scala  DB.scala  Persist.scala  Repository.scala  Tables.scala  package.scala
core/src/main/scala/pl/dyskobol/prototype/: DiskReader.scala  Dispatcher.scala  Dyskobol.scala  DyskobolSystem.scala  PersistanceManager.scala  System.scala  Worker.scala  package.scala
core/src/main/scala/pl/dyskobol/prototype/customstages/: GeneratedFilesBuffer.scala  VFSFileSource.scala
core/src/main/scala/pl/dyskobol/prototype/persist/: BasicFileInfo.scala  Batcher.scala  DB.scala  FileEntity.scala  InfoPersisted.scala  MimeType.scala  PersistActor.scala  PersistenceService.scala  Tables.scala
core/src/main/scala/simple/: Library.scala
core/src/test/scala/bindings/: SleuthkitTest.scala
core/src/test/scala/plugins/: PluginTest.scala
core/src/test/scala/plugins/documents/: DocumentContentTest.scala  DocumentMetadataTest.scala
core/src/test/scala/plugins/image/: ImagePluginTest.scala
docs/conf/: application.conf  sleuthkit-build.md
native/src/: CMakeLists.txt  bindings_Sleuthkit__.c  library.c
native/src/include/: bindings_Sleuthkit__.h  simple_Library__.h
project/: plugins.sbt
src/main/scala/pl/dyskobol/prototype/: Dyskobol.scala
src/main/scala/pl/dyskobol/prototype/io/: DiscReader.scala
tsk-bindings/: CMakeLists.txt
tsk-bindings/src/: tsk_bindings.cpp  tsk_bindings.h
(+38 files in other folders)
