################################################################
# A minimal CMake file that is compatible with sbt-jni         #
#                                                              #
# All settings required by sbt-jni have been marked so, please #
# add/modify/remove settings to build your specific library.   #
################################################################

cmake_minimum_required(VERSION 2.8.0)

# Define project and related variables
# (required by sbt-jni) please use semantic versioning
#
project (bindings_tsk)

# Setup JNI
find_package(JNI REQUIRED)
if (JNI_FOUND)
    message (STATUS "JNI include directories: ${JNI_INCLUDE_DIRS}")
endif()

# Include directories
include_directories(.)
include_directories(include)
include_directories(${JNI_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(/usr/local/include/tsk)
INCLUDE_DIRECTORIES(/usr/lib/jvm/java-8-oracle/include/)
INCLUDE_DIRECTORIES(/usr/lib/jvm/java-8-oracle/include/linux)

# Sources
file(GLOB LIB_SRC
  "*.c"
  "*.cc"
  "*.cpp"
)

# Setup installation targets
# (required by sbt-jni) major version should always be appended to library name
#
set (LIB_NAME ${PROJECT_NAME}${PROJECT_VERSION_MAJOR})
add_library(${LIB_NAME} SHARED ${LIB_SRC})
TARGET_LINK_LIBRARIES(${LIB_NAME} tsk)
install(TARGETS ${LIB_NAME} LIBRARY DESTINATION .)
